--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -17,7 +17,7 @@
 <body>
    <div class="flex">
     <div class="img">
-      <img class="qr" src="./images/image-qr-code.png" width="200px;">
+      <img class="qr" src="image-qr-code.png" width="200px;">
 
     </div>
     <div class="text"> <h1>Improve your front-end skills by building projects</h1>
